--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
           <a href="https://github.com/divisible-by-hero/tailor" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
 
-        <p>Check out the full documentation.</p>
+        <p>Github Repo</p>
+        <p><a href="https://github.com/divisible-by-hero/tailor">https://github.com/divisible-by-hero/tailor</a></p>
+
+
+        <p>Full documentation.</p>
         <p><a href="http://readthedocs.org/docs/tailor/en/latest/">http://readthedocs.org/docs/tailor/en/latest/</a></p>
 
 
       </section>
     </div>
 
+    <a href="https://github.com/divisible-by-hero/tailor"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
     
   </body>
 </html>
